--- a/RuyiCppSDKTest/RuyiCppSDKTest.vcxproj
+++ b/RuyiCppSDKTest/RuyiCppSDKTest.vcxproj
@@ -183,12 +183,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -198,12 +198,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -213,12 +213,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -231,13 +231,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -252,14 +252,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -271,14 +271,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -290,14 +290,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -312,7 +312,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)\RuyiSDKCpp\;$(SolutionDir)..\externals\boost_1_64_0;$(SolutionDir)..\externals\thrift.cpp\src;$(SolutionDir)..\externals\jsoncpp\include\json;$(SolutionDir)..\externals\jsoncpp\src\lib_json;$(SolutionDir)\RuyiSDKCpp\Generated\CommonType;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_ALL_DYN_LINK;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -320,7 +320,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib;$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\externals\boost_1_64_0\lib\$(Platform);$(SolutionDir)\..\output\$(RuyiConfig)\RuyiSDKCpp\lib;$(SolutionDir)..\externals\ZeroMQ\lib\$(Platform);$(ProjectDir)..\..\externals\jsoncpp\$(Platform)\$(Configuration);$(SolutionDir)..\externals\OpenSSL\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>RuyiSDK$(LinkageSuffix).lib;jsoncpp.lib;libzmq.lib;libcrypto.lib;libssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
